use correct keys for new flavors

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -150,7 +150,7 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-    name: "m2.8xlarge"
+  - name: "m2.8xlarge"
     id: "160"
     vcpus: "16"
     ram: "131056"
@@ -159,7 +159,7 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-    name: "m5.16xlarge"
+  - name: "m5.16xlarge"
     id: "220"
     vcpus: "64"
     ram: "262128"
@@ -168,7 +168,7 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-    name: "m5.32xlarge"
+  - name: "m5.32xlarge"
     id: "230"
     vcpus: "128"
     ram: "524272"
@@ -177,7 +177,7 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
-    name: "m5.64xlarge"
+  - name: "m5.64xlarge"
     id: "240"
     vcpus: "256"
     ram: "1048560"
