hermes: add chown to es init container
On first start, it isn't chowned. So this catches it incase of pv removal.

--- a/openstack/hermes/templates/elasticsearch-deployment.yaml
+++ b/openstack/hermes/templates/elasticsearch-deployment.yaml
@@ -33,6 +33,7 @@ spec:
             - chown 1000:1000 /data/ &&
               rm -rf /data/es-config &&
               mkdir /data/es-config &&
+              chown 1000:1000 /data/es-config &&
               cp /hermes-etc/* /data/es-config &&
               mkdir /data/es-config/scripts &&
               mkdir -p /data/snapshots
