Default as much as possible

--- a/openstack/backup-cleanup/values.yaml
+++ b/openstack/backup-cleanup/values.yaml
@@ -3,11 +3,11 @@ sleep_for: 3600
 
 auth:
   auth_url: DEFINED-IN-REGION-SECRETS
-  user_domain_name: DEFINED-IN-REGION-SECRETS
-  username: DEFINED-IN-REGION-SECRETS
+  user_domain_name: Default
+  username: db_backup
   password: DEFINED-IN-REGION-SECRETS
-  project_domain_name: DEFINED-IN-REGION-SECRETS
-  project_name: DEFINED-IN-REGION-SECRETS
+  project_domain_name: ccadmin
+  project_name: master
 
 destination:
   container_name: db_backup
