--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -161,6 +161,7 @@ scheduler:
   default_filters: "AvailabilityZoneFilter, RamFilter, DiskFilter, ComputeFilter, ComputeCapabilitiesFilter, ImagePropertiesFilter, ServerGroupAntiAffinityFilter, ServerGroupAffinityFilter, BaremetalExactRamFilter, BaremetalExactCoreFilter, BaremetalExactDiskFilter"
   ram_weight_multiplier: 1.0
   disk_weight_multiplier: 1.0
+  io_ops_weight_multiplier: 0.0
 
 compute:
   defaults:
