[keystone] Rocky is the new normal

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -20,11 +20,11 @@ run_db_migration: False
 skipRepairRoleAssignments: False
 
 # current keystone release
-release: queens
+release: rocky
 
 api:
   image: "monsoon/loci-keystone"
-  imageTag: queens-20180814091359
+  imageTag: rocky-20181214101949
 
   ## Specify a imagePullPolicy
   ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -147,7 +147,7 @@ api:
 
 cron:
   image: "monsoon/loci-keystone"
-  imageTag: queens-20180814091359
+  imageTag: rocky-20181214101949
 
   cronSchedule: "0 * * * *"
 
