only if there are zones

--- a/system/kube-monitoring/charts/cloudprober-target/values.yaml
+++ b/system/kube-monitoring/charts/cloudprober-target/values.yaml
@@ -1,6 +1,6 @@
 # Default values for cloudprober-target.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-zones:
-  - DEFINED-IN-REGION-SECRETS
+#zones:
+#  - DEFINED-IN-REGION-SECRETS
 
