fix typo in cloudprober-target deployment.yaml

--- a/system/kube-monitoring/charts/cloudprober-target/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-target/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.zones and not eq .Values.zones "DEFINED-IN-REGION-SECRETS" }}
+{{ if .Values.zones and ne .Values.zones "DEFINED-IN-REGION-SECRETS" }}
 {{- range $zone, $ext_ip := .Values.zones }}
 kind: Deployment
 apiVersion: extensions/v1beta1
