--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -46,12 +46,13 @@ pod:
 
 debug: "True"
 
+sentry:
+  enabled: true
+
 dbName: cinder
 dbPassword: null
 
 port_metrics: 9102
-
-sentry_dsn: DEFINE-IN-REGION-CHART
 
 backend_defaults:
   suppress_requests_ssl_warnings: True
