--- a/system/kube-monitoring/charts/cloudprober-target/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/cloudprober-target/templates/deployment.yaml
@@ -58,16 +58,17 @@ spec:
               protocol: UDP
           livenessProbe:
             exec:
-              command: ["/bin/sh", "-c", "nc -v -w 3 localhost 5201"]
+              command: ["/bin/sh", "-c", "nc -v -n -z localhost 5201"]
             timeoutSeconds: 5
             periodSeconds: 15
             initialDelaySeconds: 15
           readinessProbe:
             exec:
-              command: ["/bin/sh", "-c", "nc -v -w 3 localhost 5201"]
+              command: ["/bin/sh", "-c", "nc -v -n -z localhost 5201"]
             timeoutSeconds: 5
             periodSeconds: 15
             initialDelaySeconds: 15
+
 ---
 {{- end }}
 {{ end }}
