--- a/system/kube-monitoring/charts/cloudprober-target/templates/service.yaml
+++ b/system/kube-monitoring/charts/cloudprober-target/templates/service.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.zones }}
+{{ if (.Values.zones) and (ne .Values.zones "DEFINED-IN-REGION-SECRETS") }}
 {{- range $zone, $ext_ip := .Values.zones }}
 apiVersion: v1
 kind: Service
