--- a/openstack/maia/templates/prometheus-deployment.yaml
+++ b/openstack/maia/templates/prometheus-deployment.yaml
@@ -34,6 +34,7 @@ spec:
             - -storage.local.retention={{ .Values.prometheus.retention }}
             - -web.console.libraries=/etc/prometheus/console_libraries
             - -web.console.templates=/etc/prometheus/consoles
+            - -web.listen-address=0.0.0.0:{{ .Values.prometheus.listen_port }}
             - -web.external-url=https://prometheus-maia.{{ .Values.global.region }}.{{ .Values.global.domain }}
             - -log.level={{ default "info" .Values.prometheus.log_level }}
           ports:
