openstack instance, hypervisor sd

--- a/system/kube-monitoring/charts/prometheus-collector/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/values.yaml
@@ -10,3 +10,14 @@ ingress:
 rbac:
   create: false
   serviceAccountName: default
+
+openstack_sd:
+  enabled:            false
+  role:               DEFINED-IN-SECRETS
+  region:             DEFINED-IN-SECRETS
+  identity_endpoint:  DEFINED-IN-SECRETS
+  username:           DEFINED-IN-SECRETS
+  password:           DEFINED-IN-SECRETS
+  domain_name:        DEFINED-IN-SECRETS
+  project_name:       DEFINED-IN-SECRETS
+  all_tenants:        DEFINED-IN-SECRETS
