specify region in page title

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/deployment.yaml
@@ -36,6 +36,9 @@ spec:
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.log_level }}
+            {{- if semverCompare ">=v2.6.0" .Values.global.prometheus.tag }}
+            - --web.page-title=Prometheus {{ .Values.global.region | upper }}
+            {{- end }}
           ports:
             - name: http 
               containerPort: 9090
