--- a/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/prometheus-collector/templates/deployment.yaml
@@ -31,6 +31,9 @@ spec:
             - --web.enable-admin-api
             - --web.enable-lifecycle
             - --log.level={{ default "info" .Values.log_level }}
+            {{- if semverCompare ">=v2.6.0" .Values.global.prometheus.tag }}
+            - --web.page-title=Prometheus Collector {{ .Values.global.region | upper }}
+            {{- end }}
           ports:
             - name: http
               containerPort: 9090
