further incr. scrape interval/timeout in federation

--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -8,8 +8,8 @@ ingress:
 retention: 7d
 
 federation:
-  scrapeInterval: 110s
-  scrapeTimeout: 105s
+  scrapeInterval: 2m
+  scrapeTimeout: 115s
 
 persistence:
   name: prometheus-frontend-data
