[designate] added kubernetes-entrypoint dependencies where missing & mariadb readyness/liveness checks

--- a/common/mariadb/values.yaml
+++ b/common/mariadb/values.yaml
@@ -11,6 +11,27 @@ port_public: 3306
 #initdb_configmap:
 #persistence_claim:
 
+livenessProbe:
+  enabled: true
+  ##
+  ## Initializing the database could take some time
+  initialDelaySeconds: 120
+  ##
+  ## Default Kubernetes values
+  periodSeconds: 10
+  timeoutSeconds: 1
+  successThreshold: 1
+  failureThreshold: 3
+readinessProbe:
+  enabled: true
+  initialDelaySeconds: 30
+  ##
+  ## Default Kubernetes values
+  periodSeconds: 10
+  timeoutSeconds: 1
+  successThreshold: 1
+  failureThreshold: 3
+
 backup:
   enabled: false
   interval_full: 1 days
