--- a/openstack/designate/templates/worker-deployment.yaml
+++ b/openstack/designate/templates/worker-deployment.yaml
@@ -46,6 +46,8 @@ spec:
               value: {{ .Release.Namespace }}
             - name: DEBUG_CONTAINER
               value: "false"
+            - name: DEPENDENCY_SERVICE
+              value: "designate-mariadb,{{ .Release.Name }}-rabbitmq"
             {{- if .Values.sentry.enabled }}
             - name: SENTRY_DSN
               valueFrom:
