--- a/openstack/designate/templates/mdns-deployment.yaml
+++ b/openstack/designate/templates/mdns-deployment.yaml
@@ -37,10 +37,16 @@ spec:
           image: {{.Values.global.image_repository}}/{{.Values.global.image_namespace}}/ubuntu-source-designate-mdns:{{.Values.image_version_designate_mdns}}
           imagePullPolicy: IfNotPresent
           command:
-            - bash
-          args:
-            - /container.init/designate-mdns-start
+            - /usr/local/bin/kubernetes-entrypoint
           env:
+            - name: COMMAND
+              value: "/container.init/designate-mdns-start"
+            - name: NAMESPACE
+              value: {{ .Release.Namespace }}
+            - name: DEPENDENCY_JOBS
+              value: "designate-migration"
+            - name: DEPENDENCY_SERVICE
+              value: "designate-mariadb,{{ .Release.Name }}-rabbitmq"
             - name: DEBUG_CONTAINER
               value: "false"
             {{- if .Values.sentry.enabled }}
