--- a/openstack/designate/templates/producer-deployment.yaml
+++ b/openstack/designate/templates/producer-deployment.yaml
@@ -40,6 +40,8 @@ spec:
               value: "/container.init/designate-producer-start"
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
+            - name: DEPENDENCY_SERVICE
+              value: "designate-mariadb,{{ .Release.Name }}-rabbitmq"
             - name: DEBUG_CONTAINER
               value: "false"
             {{- if .Values.sentry.enabled }}
