--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -35,45 +35,66 @@ spec:
         chart-version: {{.Chart.Version}}
         configmap-etc-hash: {{ include (print $.Template.BasePath "/configmap-etc.yaml") . | sha256sum }}
         configmap-bin-hash: {{ include (print $.Template.BasePath "/configmap-bin.yaml") . | sha256sum }}
-{{- if and (eq .Capabilities.KubeVersion.Major "1") (lt .Capabilities.KubeVersion.Minor "5") }}
-        scheduler.alpha.kubernetes.io/affinity: >
-          {"podAntiAffinity":
-            {"preferredDuringSchedulingIgnoredDuringExecution": [
-              {"weight": 10, "podAffinityTerm":
-                {"topologyKey": "kubernetes.io/hostname",
-                 "labelSelector": { "matchExpressions": [
-                    {"key": "app", "operator": "In", "values": ["{{ template "fullname" . }}"]},
-                    {"key": "release", "operator": "In", "values": ["{{ .Release.Name }}"]},
-                    {"key": "system", "operator": "In", "values": ["openstack"]},
-                    {"key": "component", "operator": "In", "values": ["keystone"]},
-                    {"key": "type", "operator": "In", "values": ["api"]}
-                  ]}
-                }
-              }
-            ]}
-          }
-{{- end }}
     spec:
 {{- if .Values.rbac.enabled }}
       serviceAccountName: keystone
 {{- end }}
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 10
+            podAffinityTerm:
+              topologyKey: kubernetes.io/hostname
+              labelSelector:
+                matchExpressions:
+                - key: release_name
+                  operator: In
+                  values:
+                  - {{ .Release.Name }}
+                - key: system
+                  operator: In
+                  values:
+                  - openstack
+                - key: component
+                  operator: In
+                  values:
+                  - keystone
+                - key: type
+                  operator: In
+                  values:
+                  - api
+      terminationGracePeriodSeconds: {{ .Values.api.terminationGracePeriodSeconds | default "30" }}
+      initContainers:
+      - name: kubernetes-entrypoint
+        #image: quay.io/stackanetes/kubernetes-entrypoint:v0.3.1
+        image: "{{ default "hub.global.cloud.sap" .Values.global.imageRegistry }}/{{ .Values.api.image }}:{{ .Values.api.imageTag }}"
+        imagePullPolicy: {{ .Values.api.imagePullPolicy | default "IfNotPresent" | quote }}
+        command:
+          - /usr/local/bin/kubernetes-entrypoint
+        env:
+        - name: NAMESPACE
+          value: {{ .Release.Namespace }}
+{{- if .Release.IsInstall }}
+        - name: DEPENDENCY_JOBS
+          value: keystone-job-migration,keystone-job-bootstrap
+{{- else }}
+  {{- if or .Values.run_db_migration }}
+        - name: DEPENDENCY_JOBS
+          value: keystone-job-migration
+  {{- end }}
+{{- end }}
+        - name: DEPENDENCY_SERVICE
+          value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
+        - name: COMMAND
+          value: "true"
       containers:
         - name: keystone-api
           image: "{{ default "hub.global.cloud.sap" .Values.global.imageRegistry }}/{{ .Values.api.image }}:{{ .Values.api.imageTag }}"
           imagePullPolicy: {{ .Values.api.imagePullPolicy | default "IfNotPresent" | quote }}
           command:
-            - /usr/local/bin/kubernetes-entrypoint
+            - /scripts/keystone-api.sh
+            - start
           env:
-            - name: COMMAND
-              value: "/scripts/keystone-api.sh start"
-            - name: NAMESPACE
-              value: {{ .Release.Namespace }}
-{{- if .Release.IsInstall }}
-            - name: DEPENDENCY_JOBS
-              value: keystone-job-migration,keystone-job-bootstrap
-{{- end }}
-            - name: DEPENDENCY_SERVICE
-              value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
             {{- if .Values.sentry.enabled }}
             - name: SENTRY_DSN
             {{- if .Values.sentry.dsn }}
@@ -105,12 +126,15 @@ spec:
           readinessProbe:
             tcpSocket:
               port: 5000
+            initialDelaySeconds: 15
+            periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /healthcheck
               port: 5000
-            initialDelaySeconds: 15
-            timeoutSeconds: 15
+            initialDelaySeconds: 50
+            periodSeconds: 20
+            timeoutSeconds: 5
           volumeMounts:
             - name: etc-keystone
               mountPath: /etc/keystone
