--- a/openstack/keystone/templates/deployment-cron.yaml
+++ b/openstack/keystone/templates/deployment-cron.yaml
@@ -33,23 +33,37 @@ spec:
 {{- if .Values.rbac.enabled }}
       serviceAccountName: keystone
 {{- end }}
+      initContainers:
+      - name: kubernetes-entrypoint
+        #image: quay.io/stackanetes/kubernetes-entrypoint:v0.3.1
+        image: "{{ default "hub.global.cloud.sap" .Values.global.imageRegistry }}/{{ .Values.api.image }}:{{ .Values.api.imageTag }}"
+        imagePullPolicy: {{ .Values.api.imagePullPolicy | default "IfNotPresent" | quote }}
+        command:
+          - /usr/local/bin/kubernetes-entrypoint
+        env:
+        - name: NAMESPACE
+          value: {{ .Release.Namespace }}
+{{- if .Release.IsInstall }}
+        - name: DEPENDENCY_JOBS
+          value: keystone-job-migration,keystone-job-bootstrap
+{{- else }}
+  {{- if or .Values.run_db_migration }}
+        - name: DEPENDENCY_JOBS
+          value: keystone-job-migration
+  {{- end }}
+{{- end }}
+        - name: DEPENDENCY_SERVICE
+          value: {{ .Release.Name }}-postgresql
+        - name: COMMAND
+          value: "true"
       containers:
         - name: keystone-cron
           image: {{ default "hub.global.cloud.sap" .Values.global.imageRegistry }}/{{ .Values.cron.image }}:{{ .Values.cron.imageTag }}
           imagePullPolicy: {{ .Values.cron.imagePullPolicy | default "IfNotPresent" | quote }}
           command:
-            - /usr/local/bin/kubernetes-entrypoint
+            - bash
+            - /scripts/cron
           env:
-            - name: COMMAND
-              value: "bash /scripts/cron"
-            - name: NAMESPACE
-              value: {{ .Release.Namespace }}
-{{- if .Release.IsInstall }}
-            - name: DEPENDENCY_JOBS
-              value: keystone-job-migration,keystone-job-bootstrap
-{{- end }}
-            - name: DEPENDENCY_SERVICE
-              value: {{ .Release.Name }}-postgresql
             {{- if .Values.sentry.enabled }}
             - name: SENTRY_DSN
             {{- if .Values.sentry.dsn }}
