--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -150,9 +150,10 @@ consoles:
     portInternal: '6083'
   shellinabox:
     portInternal: '6084'
-# enable mksproxy if upgraded all regions to queens
-#  mks:
-#    portInternal: '6085'
+  mks:
+    portInternal: '6085'
+    args: '--web /usr/local/noVNC-mks --verbose'
+    inject_nova_credentials: true
 
 scheduler:
   driver: "filter_scheduler"
