vspc for all regions - enabled by default

--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -44,8 +44,9 @@ template: |
       datastore_regex = {= datastore_regex | quote =}
       {{- end }}
       image_as_template = {{ .Values.compute.defaults.enable_image_as_template | default "False" }}
-      {{- if .Values.vspc.enabled }}
+      {{- if .Values.vspc.nodeIP }}
       serial_port_service_uri = vmware-vspc
       serial_port_proxy_uri = telnet://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.telnet.portExternal }}
+      serial_log_uri = http://{{ .Values.vspc.nodeIP }}:{{ .Values.vspc.web.portExternal }}
       {{- end }}
   {{ end }}
