--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-deployment-vct.yaml
@@ -92,7 +92,7 @@ template: |
             name: nova-etc
             subPath: compute.filters
             readOnly: true
-{{- if .Values.vspc.enabled }}
+{{- if .Values.vspc.pvc.existingClaim }}
           - mountPath: /opt/vspc
             name: serial-log-dir
             readOnly: true
@@ -174,7 +174,7 @@ template: |
         - name: ml2-conf-vmware
           configMap:
             name: neutron-ml2-vmware-{= name =}
-{{- if .Values.vspc.enabled }}
+{{- if .Values.vspc.pvc.existingClaim }}
         - name: serial-log-dir
           persistentVolumeClaim:
             claimName: {{ .Values.vspc.pvc.existingClaim | default "nova-vspc-pvclaim" }}
