[Sentry] using imageTag from secrets

--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -28,7 +28,7 @@ organizationName: Monsoon
 organizationSlug: monsoon
 image:
   repository: sentry
-  tag: 8.17.0
+#  tag: 8.17.0
   pullPolicy: IfNotPresent
 service:
   name: sentry
@@ -52,7 +52,6 @@ operator:
     pullPolicy: IfNotPresent
 
 postgresql:
-  #postgresPassword:
   postgresDatabase: sentry
   persistence:
     enabled: true
