--- a/system/sentry/values.yaml
+++ b/system/sentry/values.yaml
@@ -56,6 +56,7 @@ postgresql:
   persistence:
     enabled: true
     accessMode: ReadWriteMany
+    size: 50Gi
   resources:
     requests:
       memory: 10Gi
