--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -174,6 +174,8 @@ compute:
       pbm_enabled: False
       pbm_default_policy: "nova-ephemeral"
 
+conductor: {}
+
 quota:
   # most default quotas are 0 to enforce usage of the Resource Management tool in Elektra
   cores: 0
