after switching to the new prometheus v2, maia should actually listen to it and not just to the old one on its new port ...

--- a/openstack/maia/templates/_maia.conf
+++ b/openstack/maia/templates/_maia.conf
@@ -1,6 +1,6 @@
 {{- if .Values.maia.enabled }}
 [maia]
-prometheus_url = "http://prometheus-maia:{{.Values.prometheus.listen_port}}"
+prometheus_url = "http://prometheus-maia:{{.Values.prometheusv2.listen_port}}"
 bind_address = "0.0.0.0:{{.Values.maia.listen_port}}"
 #proxy = "http://localhost:8889"
 # do not list label values from series older than label_value_ttl
