the prometheus service needsto be switched to the v2 port as well ...

--- a/openstack/maia/templates/prometheus-service.yaml
+++ b/openstack/maia/templates/prometheus-service.yaml
@@ -10,11 +10,11 @@ metadata:
     component: prometheus
   annotations:
     prometheus.io/scrape: "true"
-    prometheus.io/port: "{{ .Values.prometheus.listen_port }}"
+    prometheus.io/port: "{{ .Values.prometheusv2.listen_port }}"
 spec:
   selector:
     component: prometheus-maia
   ports:
     - name: http
-      port: {{ .Values.prometheus.listen_port }}
+      port: {{ .Values.prometheusv2.listen_port }}
 {{- end }}
