openstack services now bring their own rabbits - the k8s dependencies should respect that

--- a/openstack/cinder/templates/scheduler-deployment.yaml
+++ b/openstack/cinder/templates/scheduler-deployment.yaml
@@ -48,7 +48,7 @@ spec:
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_SERVICE
-              value: "cinder-api,rabbitmq"
+              value: "cinder-api,{{ .Release.Name }}-rabbitmq"
             - name: SENTRY_DSN
               value: {{.Values.sentry_dsn | quote}}
             - name: PGAPPNAME
