--- a/openstack/cinder/templates/api-deployment.yaml
+++ b/openstack/cinder/templates/api-deployment.yaml
@@ -49,7 +49,7 @@ spec:
             - name: DEPENDENCY_JOBS
               value: "cinder-migration"
             - name: DEPENDENCY_SERVICE
-              value: "cinder-postgresql,rabbitmq"
+              value: "cinder-postgresql,{{ .Release.Name }}-rabbitmq"
             - name: STATSD_HOST
               value: "localhost"
             - name: STATSD_PORT
