[nova] Add options to inject values for api, api-metadata, and condcutor services

--- a/openstack/nova/templates/conductor-deployment.yaml
+++ b/openstack/nova/templates/conductor-deployment.yaml
@@ -60,14 +60,18 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
           volumeMounts:
-            - name: etcnova
-              mountPath: /etc/nova
-            - name: nova-etc
-              mountPath: /etc/nova/nova.conf
+            - mountPath: /etc/nova
+              name: etcnova
+            - mountPath: /etc/nova/nova.conf
+              name: nova-etc
               subPath: nova.conf
               readOnly: true
-            - name: nova-etc
-              mountPath: /etc/nova/logging.ini
+            - mountPath: /etc/nova/nova-conductor.conf
+              name: nova-etc
+              subPath: nova-conductor.conf
+              readOnly: true
+            - mountPath: /etc/nova/logging.ini
+              name: nova-etc
               subPath: logging.ini
               readOnly: true
       volumes:
