--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -141,6 +141,18 @@ neutron: {}
 
 cross_az_attach: 'False'
 
+api:
+  DEFAULT:
+    api_paste_config: /etc/nova/api-paste.ini
+    enabled_apis: osapi_compute,metadata
+    use_forwarded_for: True
+
+api_metadata:
+  DEFAULT:
+    api_paste_config: /etc/nova/api-paste.ini
+    enabled_apis: metadata
+    use_forwarded_for: True
+
 consoles:
   novnc:
     portInternal: '6080'
