--- a/openstack/nova/templates/api-deployment.yaml
+++ b/openstack/nova/templates/api-deployment.yaml
@@ -97,6 +97,10 @@ spec:
               name: nova-etc
               subPath: nova.conf
               readOnly: true
+            - mountPath: /etc/nova/nova-api.conf
+              name: nova-etc
+              subPath: nova-api.conf
+              readOnly: true
             - mountPath: /etc/nova/api-paste.ini
               name: nova-etc
               subPath: api-paste.ini
