--- a/openstack/nova/templates/api-metadata-deployment.yaml
+++ b/openstack/nova/templates/api-metadata-deployment.yaml
@@ -89,6 +89,10 @@ spec:
               name: nova-etc
               subPath: nova.conf
               readOnly: true
+            - mountPath: /etc/nova/nova-api-metadata.conf
+              name: nova-etc
+              subPath: nova-api-metadata.conf
+              readOnly: true
             - mountPath: /etc/nova/api-paste.ini
               name: nova-etc
               subPath: api-paste.ini
