--- a/openstack/nova/templates/etc-configmap.yaml
+++ b/openstack/nova/templates/etc-configmap.yaml
@@ -11,7 +11,11 @@ data:
   nova.conf: |
 {{ include (print .Template.BasePath "/etc/_nova.conf.tpl") . | indent 4 }}
   nova-api.conf: |
-{{ include (print .Template.BasePath "/etc/_nova-api.conf.tpl") . | indent 4 }}
+{{ include "util.helpers.valuesToIni" .Values.api | indent 4 }}
+  nova-api-metadata.conf: |
+{{ include "util.helpers.valuesToIni" .Values.api_metadata | indent 4 }}
+  nova-conductor.conf: |
+{{ include "util.helpers.valuesToIni" .Values.conductor | indent 4 }}
   nova-scheduler.conf: |
 {{ include (print .Template.BasePath "/etc/_nova-scheduler.conf.tpl") . | indent 4 }}
   policy.json: |
