--- a/openstack/nova/templates/bin-configmap.yaml
+++ b/openstack/nova/templates/bin-configmap.yaml
@@ -10,5 +10,11 @@ data:
 {{ (.Files.Glob "bin/*").AsConfig | indent 2 }}
   common.sh: |
 {{ include "common.sh" .| indent 4 }}
+  db-migrate: |
+{{ include (print .Template.BasePath "/bin/_db-migrate.tpl") . | indent 4 }}
+  db-online-migrate: |
+{{ include (print .Template.BasePath "/bin/_db-online-migrate.tpl") . | indent 4 }}
   db-update-cells: |
 {{ include (print .Template.BasePath "/bin/_db-update-cells.tpl") . | indent 4 }}
+  queens-dry-run: |
+{{ include (print .Template.BasePath "/bin/_queens-dry-run.tpl") . | indent 4 }}
