--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -90,7 +90,9 @@ apidbPassword: null
 
 portMetrics: '9102'
 
-sentry_dsn: DEFINE_IN_REGION_CHART
+sentry:
+  enabled: true
+  #dsn: DEFINE_IN_REGION_CHART
 
 loci:
   nova: false
