--- a/openstack/nova/templates/consoleauth-deployment.yaml
+++ b/openstack/nova/templates/consoleauth-deployment.yaml
@@ -50,6 +50,17 @@ spec:
           value: {{ .Release.Namespace }}
         - name: DEPENDENCY_SERVICE
           value: "nova-api"
+        {{- if .Values.sentry.enabled }}
+        - name: SENTRY_DSN
+        {{- if .Values.sentry.dsn }}
+          value: {{ .Values.sentry.dsn | quote}}
+        {{ else }}
+          valueFrom:
+            secretKeyRef:
+              name: sentry
+              key: nova.DSN.python
+        {{- end }}
+        {{- end }}
 {{- if .Values.python_warnings }}
         - name: PYTHONWARNINGS
           value: {{ .Values.python_warnings | quote }}
