[keystone] user proper labels for affinity clause

--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -47,10 +47,10 @@ spec:
               topologyKey: kubernetes.io/hostname
               labelSelector:
                 matchExpressions:
-                - key: release_name
+                - key: name
                   operator: In
                   values:
-                  - {{ .Release.Name }}
+                  - keystone-api
                 - key: system
                   operator: In
                   values:
