[neutron] Add tempest feature for neutron.

--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -332,3 +332,7 @@ nanny:
     interval: 60
     # really delete entities after how many iterations
     iterations: 3
+
+tempest:
+  imageTag: latest
+  enabled: false
