[nova][neutron-dvs-agent] set hostname to match deployment name

--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-neutron-configmap-vct.yaml
@@ -19,6 +19,7 @@ template: |
   data:
     ml2-vmware.ini: |
       [DEFAULT]
+      host = nova-compute-{= name =}
       backdoor_socket=/var/lib/neutron/eventlet_backdoor.socket
 
       [securitygroup]
