--- a/openstack/limes/values.yaml
+++ b/openstack/limes/values.yaml
@@ -32,3 +32,6 @@ limes:
   #
   #    .Values.limes.clusters.$ID.constraints = "/etc/limes/constraints-exampleconstraint.yaml"
   constraints: {}
+
+  # Set to true to allow all CORS origins. Useful for staging/QA, but not recommended for production.
+  relaxed_cors: false
