keystone: allow configuration of token caching time

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -58,6 +58,8 @@ api:
     allow_expired_window: 28800
     # maximum size of a token (LDAP seems to go over the default 255)
     max_token_size: 268
+    # The number of seconds to cache token creation and validation data.
+    cache_time: 3600
 
   fernet:
     maxActiveKeys: 3
@@ -169,6 +171,9 @@ cron:
     rollingUpdate:
       maxUnavailable: 0
       maxSurge: 3
+
+cache:
+  expiration_time: 600
 
 tempest:
   image: "monsoon/rally-openstack"
@@ -304,7 +309,7 @@ watcher:
   enabled: true
 
 lifesaver:
-  enabled: false
+  enabled: true
 
 cors:
   enabled: false
