define proper switches for the nova queens instance mapping check

--- a/openstack/nova/templates/nanny-deployment.yaml
+++ b/openstack/nova/templates/nanny-deployment.yaml
@@ -61,9 +61,9 @@ spec:
             - name: NOVA_CONSISTENCY_MAX_INSTANCE_FAULTS
               value: {{ .Values.consistency.max_instance_faults | quote }}
             - name: NOVA_QUEENS_INSTANCE_MAPPING_ENABLED
-              value: "True"
-            - name: NOVA_INSTANCE_MAPPING_DRY_RUN
-              value: "True"
+              value: {{ .Values.consistency.queens_instance_mapping_enabled | quote }}
+            - name: NOVA_QUEENS_INSTANCE_MAPPING_DRY_RUN
+              value: {{ .Values.consistency.queens_instance_mapping_dry_run | quote }}
             - name: NOVA_NANNY_INTERVAL
               value: {{ .Values.nanny.interval | quote }}
             - name: OS_AUTH_URL
