--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -571,6 +571,10 @@ consistency:
   enabled: False
   # dry run mode, i.e. just check for consistency without fixing it
   dry_run: True
+  # detect problems in the instance mappings we saw in queens
+  queens_instance_mapping_enabled: True
+  # dry run mode, i.e. just check for consistency without fixing it
+  queens_instance_mapping_dry_run: True
   # purge deleted block_device_mappings and reservations older than n days
   older_than: 21
   # keep at max n instance fault entries per instance
