[nova] added pythonwarnings / log tuning

--- a/openstack/nova/templates/update-cells-job.yaml
+++ b/openstack/nova/templates/update-cells-job.yaml
@@ -33,6 +33,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: PYTHONWARNINGS
+          value: {{ .Values.python_warnings | quote }}
         volumeMounts:
         - mountPath: /etc/nova
           name: etcnova
