--- a/openstack/nova/templates/migration-job.yaml
+++ b/openstack/nova/templates/migration-job.yaml
@@ -31,6 +31,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: PYTHONWARNINGS
+          value: {{ .Values.python_warnings | quote }}
         volumeMounts:
         - mountPath: /etc/nova
           name: etcnova
