--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -536,6 +536,9 @@ logging:
         nova.scheduler.host_manager: # You might get problems with unicodedecode errors if you decrease that
             handlers: stdout, sentry
             level: INFO
+        nova.virt.vmwareapi:
+            handlers: stdout, sentry
+            level: DEBUG
         eventlet.wsgi.server:
             handlers: stdout, sentry
             level: INFO
