[common] adds default loglevel to pgb

--- a/common/postgresql/templates/pgbouncer-deployment.yaml
+++ b/common/postgresql/templates/pgbouncer-deployment.yaml
@@ -59,7 +59,7 @@ spec:
             - name: STATS_PASS
               value: {{ $opts.config.stats_pass | default (derivePassword 1 "long" "password" "stats_user" (print .Values.postgresDatabase "-postgresql." .Release.Namespace ".svc.kubernetes." .Values.global.region "." .Values.global.tld)) | quote }}
             - name: LOGLEVEL
-              value: {{ .Values.global.pgbouncer.logLevel }}
+              value: {{ .Values.global.pgbouncer.logLevel | default "INFO" }}
 {{- if not $opts.debug }}
           livenessProbe:
             exec:
