--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -1,22 +1,30 @@
+{{- if .Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1" }}
 {{- if .Values.vasa_exporter.enabled }}
+apiVersion: vcenter-operator.stable.sap.cc/v1
+kind: VCenterTemplate
+metadata:
+  name: 'vasa-exporter-configmap'
+  scope: 'datacenter'
+template: |{{`
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  name: vasa-exporter
+  name: vasa-exporter-{{ name }}
   namespace: monsoon3
   labels:
     system: openstack
     service: metrics
     component: configuration
 data:
-  vasa_exporter.cfg: |
+  vasa_exporter-{{ name }}.cfg: |
     [Default]
-    host = {{ .Values.vasa_exporter.vp_host }}
-    port = {{ .Values.vasa_exporter.vp_port }}
-    vp_user = {{ .Values.vasa_exporter.vp_user }}
-    vp_pass = {{ .Values.vasa_exporter.vp_pass }}
-    vc_user = {{ .Values.vasa_exporter.vc_user }}
-    vc_pass = {{ .Values.vasa_exporter.vc_pass }}
-    vc_host = {{ .Values.vasa_exporter.vc_host }}
+    port = `}}{{ .Values.vasa_exporter.vp_port }}{{`
+    vp_user = `}}{{ .Values.vasa_exporter.vp_user }}{{`
+    vp_pass = `}}{{ .Values.vasa_exporter.vp_pass }}{{`
+    vc_user = {{ username | quote }}
+    vc_pass = {{ password | quote }}
+    vc_host = {{ host | quote }}
+    prometheus_port = `}}{{ .Values.vasa_exporter.prometheus_port }}{{`
+`}}
 {{- end }}
-
+{{- end }}
