[ironic] Split conductor ingresses
We can have multiple ingresses for the same host and different paths,
which are merged into the same host

That way, we can also generate the ingress for conductors created via kos-operator

--- a/openstack/ironic/templates/conductors.yaml
+++ b/openstack/ironic/templates/conductors.yaml
@@ -7,4 +7,6 @@
 {{ tuple $envAll $conductor | include "ironic_conductor_configmap" }}
 ---
 {{ tuple $envAll $conductor | include "ironic_conductor_console_service" }}
+---
+{{ tuple $envAll $conductor | include "ironic_conductor_console_ingress" }}
 {{- end }}
