--- a/openstack/ironic/templates/conductors-kt.yaml
+++ b/openstack/ironic/templates/conductors-kt.yaml
@@ -15,6 +15,8 @@ template: |
 {{- tuple . $conductor | include "ironic_conductor_configmap" | indent 4 }}
     ---
 {{- tuple . $conductor | include "ironic_conductor_console_service" | indent 4 }}
+    ---
+{{- tuple . $conductor | include "ironic_conductor_console_ingress" | indent 4 }}
     {% if not loop.last %}---{% endif %}
     {% endfor %}
 {{- end  }}
