--- a/openstack/vcenter-utilities/templates/vasa-exporter-service.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-service.yaml
@@ -17,13 +17,13 @@ template: |{{`
       component: vasa-exporter-{{ name }}
     annotations:
       prometheus.io/scrape: "true"
-      prometheus.io/port: "{{ .Values.vasa_exporter.prometheus_port }}"
+      prometheus.io/port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
   spec:
     selector:
       component: vasa-exporter-{{ name }}
     ports:
       - name: metrics
-        port: `}}{{ .Values.vasa_exporter.prometheus_port }}{{`
+        port: `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
 `}}
 {{- end }}
 {{- end }}
