--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -18,13 +18,13 @@ template: |{{`
   data:
     vasa_exporter-{{ name }}.cfg: |
       [Default]
-      port = `}}{{ .Values.vasa_exporter.vp_port }}{{`
-      vp_user = `}}{{ .Values.vasa_exporter.vp_user }}{{`
-      vp_pass = `}}{{ .Values.vasa_exporter.vp_pass }}{{`
+      port = `}}{{ .Values.vasa_exporter.vp_port | quote }}{{`
+      vp_user = `}}{{ .Values.vasa_exporter.vp_user | quote }}{{`
+      vp_pass = `}}{{ .Values.vasa_exporter.vp_pass | quote }}{{`
       vc_user = {{ username | quote }}
       vc_pass = {{ password | quote }}
       vc_host = {{ host | quote }}
-      prometheus_port = `}}{{ .Values.vasa_exporter.prometheus_port }}{{`
+      prometheus_port = `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
 `}}
 {{- end }}
 {{- end }}
