more changes required for the vcenter operator to parse the vasa-exporter templates properly

--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -19,10 +19,10 @@ template: |{{`
     vasa_exporter-{{ name }}.cfg: |
       [Default]
       port = `}}{{ .Values.vasa_exporter.vp_port | quote }}{{`
-      vp_user = `}}{{ .Values.vasa_exporter.vp_user | quote }}{{`
-      vp_pass = `}}{{ .Values.vasa_exporter.vp_pass | quote }}{{`
-      vc_user = {{ username | quote }}
-      vc_pass = {{ password | quote }}
+      vp_user = `}}'{{ .Values.vasa_exporter.vp_user }}'{{`
+      vp_pass = `}}'{{ .Values.vasa_exporter.vp_pass }}'{{`
+      vc_user = '{{ username }}'
+      vc_pass = '{{ password }}'
       vc_host = {{ host | quote }}
       prometheus_port = `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
 `}}
