--- a/openstack/nova/requirements.yaml
+++ b/openstack/nova/requirements.yaml
@@ -19,3 +19,13 @@ dependencies:
   - name: utils
     repository: file://../../openstack/utils
     version: 0.1.1
+  - name: postgresql
+    alias: postgresql_cell2
+    condition: cell2.enabled
+    repository: file://../../common/postgresql
+    version: 0.3.0
+  - name: rabbitmq
+    alias: rabbitmq_cell2
+    condition: cell2.enabled
+    repository: file://../../common/rabbitmq
+    version: 0.1.0
