adds cluster_type ext. label

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -49,6 +49,7 @@ data:
       # external systems (federation, remote storage, Alertmanager).
       external_labels:
         region: {{ if .Values.regionPrefix }}{{ .Values.regionPrefix }}{{- end -}}{{ .Values.global.region }}
+        cluster_type: {{ .Values.global.clusterType }}
 
     rule_files:
       - ./*.rules
