--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -2,6 +2,8 @@ global:
   region: DEFINED-AS-VALUE
   domain: DEFINED-AS-VALUE
 
+  clusterType: controlplane
+
   prometheus:
     image: prom/prometheus
     tag: v2.5.0
