--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -22,6 +22,7 @@ data:
 {{ printf "%s" $bytes | indent 4 }}
   {{- end }}
   {{- end }}
+  # add openstack alerts
   {{- if .Values.alerting.openstack }}
   {{- range $path, $bytes := .Files.Glob "openstack-*.alerts" }}
   {{ printf "%s" $path }}: |
@@ -35,15 +36,13 @@ data:
 {{ printf "%s" $bytes | indent 4 }}
   {{- end }}
   {{- end }}
-{{- end }}
-  # network alerts
+  # add network alerts
   {{- if .Values.alerting.network }}
   {{- range $path, $bytes := .Files.Glob "network-*.alerts" }}
   {{ printf "%s" $path }}: |
 {{ printf "%s" $bytes | indent 4 }}
   {{- end }}
   {{- end }}
-{{- end }}
   # add vmware alerts
   {{- if .Values.alerting.vmware }}
   {{- range $path, $bytes := .Files.Glob "vmware-*.alerts" }}
