--- a/system/kube-monitoring/charts/prometheus-frontend/values.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/values.yaml
@@ -25,3 +25,7 @@ alerting:
   openstack: true
   # disable metal alerts by setting `false` here
   metal: true
+  # disable network alerts by setting `false` here
+  network: true
+  # disable vmware alerts by setting `false` here
+  vmware: true
